--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,25 @@
 language: csharp
+os: osx 
+
+# Only run builds on specific branches
+branches:
+	only:
+	- master
+
+# send email notifications when the build changes from succeeding to broken
+notifications:
+  email:
+    on_success: never
+    on_failure: never
+
+
+install:
+- sudo -E sh ./Tests/Scripts/install.sh
+
+script:
+- sudo -E sh ./Tests/Scripts/build.sh
+
+# Environmental global variables used in install and buidl Scripts
+env:
+	global:
+	- UNITYCI_NAME="UnityOptics-CMPS115-2019Su"
